[gd_scene load_steps=2 format=3 uid="uid://eowyyxfktt2k"]

[ext_resource type="Script" uid="uid://bwrvls86rs8j7" path="res://content/on_hit_effects/freeze/freeze_effect.gd" id="1_oxhhq"]

[node name="FreezeEffect" type="Node"]
script = ExtResource("1_oxhhq")

[node name="ThawTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="timeout" from="ThawTimer" to="." method="_on_thaw_timer_timeout"]
